--- a/index.html
+++ b/index.html
@@ -83,6 +83,63 @@
           </div>
         </div>
       </section>
+
+      <section class="section-features">
+        <div class="row">
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <ion-icon
+                class="feature-box__icon"
+                name="globe-outline"
+              ></ion-icon>
+              <h3 class="heading-tertiary">Explore the world</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Aliquam enim nostrum modi cupiditate.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <ion-icon
+                class="feature-box__icon"
+                name="compass-outline"
+              ></ion-icon>
+              <h3 class="heading-tertiary">Meet nature</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Aliquam enim nostrum modi cupiditate.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <ion-icon class="feature-box__icon" name="map-outline"></ion-icon>
+              <h3 class="heading-tertiary">Find your way</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Aliquam enim nostrum modi cupiditate.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <ion-icon
+                class="feature-box__icon"
+                name="heart-outline"
+              ></ion-icon>
+              <h3 class="heading-tertiary">Live a healthier life</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Aliquam enim nostrum modi cupiditate.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- <section class="grid-test">
@@ -120,5 +177,13 @@
         <div class="col-3-of-4">Col 3 of 4</div>
       </div> -->
     <!-- </section> -->
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
