implement stories section - part 2

--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
                 alt="person on a tour"
                 class="story__img"
               />
+              <figcaption class="story__caption">Mary Smith</figcaption>
             </figure>
             <div class="story__text">
               <h3 class="heading-tertiary">
@@ -277,6 +278,36 @@
               </p>
             </div>
           </div>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape u-margin-bottom-small">
+              <img
+                src="img/nat-9.jpg"
+                alt="person on a tour"
+                class="story__img"
+              />
+              <figcaption class="story__caption">Jack Wilson</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary">
+                WOW! My life is completely different now
+              </h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Aliquam enim, dolores odio, mollitia dolorem qui, illum dolorum
+                sequi aspernatur amet consectetur adipisicing amet adipisicing.
+                met consectetur adipisicing elit. Aliquam enim, dolores odio,
+                ipsum dolor sit, amet consectetur adipisicing elit Aliquam
+                mollitia dolorem qui.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="u-center-text u-margin-top-huge">
+          <a href="#" class="btn-text">Read all stories &rarr;</a>
         </div>
       </section>
     </main>
