--- a/index.html
+++ b/index.html
@@ -458,6 +458,37 @@
       </div>
     </footer>
 
+    <div class="popup">
+      <div class="popup__content">
+        <div class="popup__left">
+          <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img" />
+          <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img" />
+        </div>
+        <div class="popup__right">
+          <h2 class="heading-secondary u-margin-bottom-small">
+            Start booking now
+          </h2>
+          <h3 class="heading-tertiary u-margin-bottom-small">
+            Important &ndash; Please read these terms before booking
+          </h3>
+          <p class="popup__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure esse
+            perspiciatis quae atque maiores eligendi ducimus necessitatibus.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
+            necessitatibus placeat sunt ullam eligendi magni maxime commodi
+            deserunt voluptate, explicabo iste cupiditate quo vitae dolore sed
+            architecto amet, officiis delectus qui esse explicabo. Dicta
+            eligendi debitis accusantium in minima recusandae placeat blanditiis
+            saepe alias architecto autem quia, mollitia, ipsam aperiam explicabo
+            corrupti aliquid soluta perferendis perspiciatis, amet consectetur
+            error. Debitis suscipit aliquam est.
+          </p>
+
+          <a href="#" class="btn btn--green">Book now</a>
+        </div>
+      </div>
+    </div>
+
     <!-- <section class="grid-test">
       <div class="row">
         <div class="col-1-of-2">Col 1 of 2</div>
